--- a/src/account/templates/account/must_authenticate.html
+++ b/src/account/templates/account/must_authenticate.html
@@ -4,7 +4,10 @@
 
 <div class="container">
 	<div class="d-flex flex-column">
+		<!-- Message prompting the user to authenticate to view the page -->
 		<p class="m-auto">You must authenticate to view this page. </p>
+
+		<!-- Links for creating an account and logging in -->
 		<p class="m-auto">
 			<a href="{% url 'register' %}">Create an account</a> or 
 			<a href="{% url 'login' %}">login</a>.
