--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cool Site</title>
+  <title>Cool Blogger</title>
   <style>
     /* CSS styles for the page */
     body {
@@ -65,13 +65,14 @@
 </head>
 <body>
   <header>
-    <h1>Cool Site</h1>
+    <h1>Cool Blogger</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Info</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/account">Account</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/logout">Logout</a></li>
+
       </ul>
     </nav>
   </header>
