--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -4,6 +4,10 @@
 {% block content %}
 <style type="text/css">
 
+    body {
+        background-color: #f8f9fa;
+    }
+
 	@media (max-width: 768px) { 
 		.right-column{
 			margin-left: 0px;
@@ -19,10 +23,18 @@
 	.blog-post-container{
 		margin-bottom: 20px;
 		width: 100%;
+		background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
 	}
+
 	.create-post-bar{
 		background-color: #fff;
 		margin-bottom:20px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
 	}
 
 	.left-column{
@@ -32,52 +44,66 @@
 	.right-column{
 		padding:0px;
 	}
+	
 	.lead{
 		font-size: 17px;
+        font-weight: bold;
 	}
+
+    .btn-primary {
+        background-color: #007bff;
+        border-color: #007bff;
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+
+    .btn-primary:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+    }
+
 </style>
 
 
 <!-- main content -->
 <div class="container">
-	<div class="row">
+    <div class="row">
 
-		<!-- blog feed -->
-		<div class="left-column col-lg-7 offset-lg-1">
+        <!-- blog feed -->
+        <div class="left-column col-lg-7 offset-lg-1">
 
-			<!-- Top 'create post' bar -->
-			<div class="d-lg-none mb-3">
-				<div class="card m-auto d-flex flex-column p-3">
-					<p class="lead">Start blogging in this cool site!</p>
-					<p class="m-auto"><a class="btn btn-primary" href="{% url 'blog:create' %}">Create post</a></p>
-				</div>
-			</div>
-			<!-- end Top 'create post' bar -->
+            <!-- Top 'create post' bar -->
+            <div class="d-lg-none mb-3">
+                <div class="card m-auto d-flex flex-column p-3">
+                    <p class="lead">Start blogging in this cool site!</p>
+                    <p class="m-auto"><a class="btn btn-primary" href="{% url 'blog:create' %}">Create post</a></p>
+                </div>
+            </div>
+            <!-- end Top 'create post' bar -->
 
-			<!-- Blog posts-->
-			{% if blog_posts %}
-				{% for post in blog_posts %}
-					<div class="blog-post-container">
-						{% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
-					</div>
-				{% endfor %}
-			{% else %}
-				<div class="blog-post-container">
-					{% include 'blog/snippets/blog_post_snippet.html' with query=query %}
-				</div>
-			{% endif %}
-			<!-- End Blog posts-->
+            <!-- Blog posts-->
+            {% if blog_posts %}
+                {% for post in blog_posts %}
+                    <div class="blog-post-container">
+                        {% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="blog-post-container">
+                    {% include 'blog/snippets/blog_post_snippet.html' with query=query %}
+                </div>
+            {% endif %}
+            <!-- End Blog posts-->
 
-		<!-- Pagination -->
-		{% include 'blog/snippets/blog_post_pagination.html' with blog_posts=blog_posts %}
+        <!-- Pagination -->
+        {% include 'blog/snippets/blog_post_pagination.html' with blog_posts=blog_posts %}
 
-		</div>
-		<!-- end blog feed -->
+        </div>
+        <!-- end blog feed -->
 
-	</div>
+    </div>
 </div>
 
 {% endblock content %}
-
-
-
