--- a/src/blog/templates/blog/edit_blog.html
+++ b/src/blog/templates/blog/edit_blog.html
@@ -1,126 +1,144 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
-<!--Styles-->
 <style type="text/css">
-   .create-form {
-	    width: 100%;
-	    max-width: 100%;
-	    padding: 15px;
-	    margin: auto;
-  	}
-
-  	.submit-button{
-  		max-width: 200px;
-  	}
-
-	.image {
-	  opacity: 1;
-	  transition: .5s ease;
-	  backface-visibility: hidden;
-	}
-
-	.middle {
-	  transition: .5s ease;
-	  opacity: 0;
-	  position: absolute;
-	  text-align: center;
-	  top: 50%;
-	  left: 50%;
-	  transform: translate(-50%, -50%);
-	
-	}
-	.image-group{
-		position: relative;
-  		text-align: center;
-  		cursor:pointer;
-	}
-
-	.image-group:hover .image {
-	  opacity: 0.3;
-	}
-
-	.image-group:hover .middle {
-	  opacity: 1;
-	}
-
-	.text {
-	  margin: auto;
-	  background-color: #4CAF50;
-	  color: white;
-	  font-size: 15px;
-	  padding: 15px;
-	}
+  body {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+  }
+  .container {
+    max-width: 800px;
+    margin: auto;
+  }
+  .create-form {
+    background: #fff;
+    border: none;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+    padding: 2rem;
+    margin-top: 2rem;
+  }
+  .create-form label {
+    font-weight: bold;
+    margin-top: 1rem;
+  }
+  .create-form input, .create-form textarea {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0.5rem;
+    width: 100%;
+    margin-top: 0.5rem;
+  }
+  .image-group {
+    position: relative;
+    cursor: pointer;
+  }
+  .image-group:hover .image {
+    opacity: 0.3;
+  }
+  .image-group:hover .middle {
+    opacity: 1;
+  }
+  .image, .middle {
+    transition: .5s ease;
+  }
+  .image {
+    width: 100%;
+    height: auto;
+  }
+  .middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0,0,0,0.6);
+    padding: 1rem;
+    border-radius: 5px;
+    color: #fff;
+  }
+  .submit-button{
+    background: #007BFF;
+    color: #fff;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+    margin-top: 2rem;
+  }
+  .submit-button:hover {
+    background: #0056b3;
+  }
+  .error-message {
+    color: red;
+  }
+  .success-message {
+    color: green;
+    text-align: center;
+  }
 </style>
 
 <div class="container">
-	<div class="row">
-		<div class="col-lg-7 offset-lg-1">
+  <div class="row">
+    <div class="col-lg-7 offset-lg-1">
 
-			{% if success_message %}
-				<h3 style="color:green; text-align: center;">{{success_message}}</h3>
-			{% endif %}
+      {% if success_message %}
+        <h3 class="success-message">{{success_message}}</h3>
+      {% endif %}
 
-			<form class="create-form" method="post" enctype="multipart/form-data">{% csrf_token %}
+      <form class="create-form" method="post" enctype="multipart/form-data">{% csrf_token %}
+        <!-- title -->
+        <div class="form-group">
+          <label for="id_title">Title</label>
+          <input class="form-control" type="text" name="title" id="id_title" placeholder="Title" value="{{form.initial.title}}" required autofocus>
+        </div>
 
-				<!-- title -->
-				<div class="form-group">
-					<label for="id_title">Title</label>
-					<input class="form-control" type="text" name="title" id="id_title" placeholder="Title" value="{{form.initial.title}}" required autofocus>
-				</div>
+        <!-- Body -->
+        <div class="form-group">
+          <label for="id_body">Content</label>
+          <textarea class="form-control" rows="10" type="text" name="body" id="id_body" placeholder="This blog is about..." 
+          required>{{form.initial.body}}</textarea>
+        </div>
 
-				<!-- Body -->
-				<div class="form-group">
-					<label for="id_body">Content</label>
-					<textarea class="form-control" rows="10" type="text" name="body" id="id_body" placeholder="This blog is about..." 
-					required>{{form.initial.body}}</textarea>
-				</div>
+        <!-- Image -->
+        <div class="form-group image-group" id="id_image_group">
+          <img class="img-fluid image" src="{{form.initial.image.url}}" id="id_image_display">
+            <div class="middle">
+              <div class="text">Change image</div>
+            </div>
+        </div>
+        <input type="file" name="image" id="id_image_file" accept="image/*" onchange="readURL(this)">
 
-				<!-- Image -->
-				<div class="form-group image-group" id="id_image_group">
-					<img class="img-fluid image" src="{{form.initial.image.url}}" id="id_image_display">
-					  <div class="middle">
-					    <div class="text">Change image</div>
-					  </div>
-				</div>
-				<input type="file" name="image" id="id_image_file" accept="image/*" onchange="readURL(this)">
-				
+        {% for field in form %}
+          <p>
+            {% for error in field.errors %}
+              <p class="error-message">{{ error }}</p>
+            {% endfor %}
+          </p>
+        {% endfor %}
+        {% if form.non_field_errors %}
+          <div class="error-message">
+            <p>{{form.non_field_errors}}</p>
+          </div>
+        {% endif %}
 
-				{% for field in form %}
-					<p>
-						{% for error in field.errors %}
-							<p style="color: red">{{ error }}</p>
-						{% endfor %}
-					</p>
-				{% endfor %}
-				{% if form.non_field_errors %}
-					<div style="color: red">
-						<p>{{form.non_field_errors}}</p>
-					</div>
-				{% endif %}
-
-				<!-- Submit btn -->
-				<button class="submit-button btn btn-lg btn-primary btn-block" type="submit">Update</button>
-			</form>	
-		</div>
-	</div>
+        <!-- Submit btn -->
+        <button class="submit-button btn btn-lg btn-primary btn-block" type="submit">Update</button>
+      </form>  
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
-	document.getElementById('id_image_group').onclick = function(event){
-    	document.getElementById('id_image_file').click();
-    };
+  document.getElementById('id_image_group').onclick = function(event){
+    document.getElementById('id_image_file').click();
+  };
 
-	function readURL(input){
-		var reader = new FileReader();
-		reader.onload = function (e) {
-            $('#id_image_display')
-                .attr('src', e.target.result)
-        };
-		reader.readAsDataURL(input.files[0]);
-	}
+  function readURL(input){
+    var reader = new FileReader();
+    reader.onload = function (e) {
+      $('#id_image_display')
+        .attr('src', e.target.result)
+    };
+    reader.readAsDataURL(input.files[0]);
+  }
 </script>
 
 {% endblock content %}
